--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </ol>
     
     <ul>
-      <li> william nylander </li>
+      <li><a href="http://www.twitter.com/kendriccheng">william nylander</a></li>
       <li> Auston Matthews </li>
       <li> Mango </li>
     </ul>
